force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__LookupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LookupField__c</fullName>
        <description>API Name of the custom field used in the query.</description>
        <inlineHelpText>API Name of the custom field used in the query.</inlineHelpText>
        <label>Lookup Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Category__c</fullName>
                </value>
                <value>
                    <fullName>Lower_Bound__c</fullName>
                </value>
                <value>
                    <fullName>Product__c</fullName>
                </value>
                <value>
                    <fullName>Upper_Bound__c</fullName>
                </value>
                <value>
                    <fullName>License_Metric__c</fullName>
                </value>
                <value>
                    <fullName>Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>Is_ILF__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Schedule__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__LowerBound__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__UpperBound__c</fullName>
                </value>
                <value>
                    <fullName>DiscountSchedule__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
                <value>
                    <fullName>Transactional_Tier__c</fullName>
                </value>
                <value>
                    <fullName>Encore_Bundle_Number__c</fullName>
                </value>
                <value>
                    <fullName>Product_Code__c</fullName>
                </value>
                <value>
                    <fullName>Region__c</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Location__c</fullName>
                </value>
                <value>
                    <fullName>Role__c</fullName>
                </value>
                <value>
                    <fullName>Bundled_Price__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>