force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__MatchType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MatchType__c</fullName>
        <description>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</description>
        <inlineHelpText>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</inlineHelpText>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Value</fullName>
                </value>
                <value>
                    <fullName>Static Value</fullName>
                </value>
                <value>
                    <fullName>Configuration Attribute Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>