force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__PriceRule2__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceRule2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price Rule associated with this Lookup Query. Replaces the legacy master-detail field.</description>
        <inlineHelpText>Price Rule associated with this Lookup Query. Replaces the legacy master-detail field.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Lookup Queries (Price Rule)</relationshipLabel>
        <relationshipName>PriceRuleLookupQueries</relationshipName>
        <type>Lookup</type>
    </CustomField>