force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__ProductRule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Rule associated with this Lookup Query</description>
        <inlineHelpText>Product Rule associated with this Lookup Query</inlineHelpText>
        <label>Product Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Lookup Queries (Product Rule)</relationshipLabel>
        <relationshipName>ProductRuleLookupQueries</relationshipName>
        <type>Lookup</type>
    </CustomField>