force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__RuleLookupObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RuleLookupObject__c</fullName>
        <formula>TEXT(SBQQ__PriceRule2__r.SBQQ__LookupObject__c)</formula>
        <label>Parent Rule Lookup Object</label>
        <type>Text</type>
    </CustomField>