force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedConfigurationAttribute__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedConfigurationAttribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Configuration Attribute that is evaluated by this query. Required if Match Type = Configuration Attribute and only if this Query is associated with a Product Rule.</description>
        <inlineHelpText>Configuration Attribute that is evaluated by this query. Required if Match Type = Configuration Attribute and only if this Query is associated with a Product Rule.</inlineHelpText>
        <label>Tested Configuration Attribute</label>
        <referenceTo>SBQQ__ConfigurationAttribute__c</referenceTo>
        <relationshipLabel>Lookup Queries</relationshipLabel>
        <relationshipName>LookupQueries</relationshipName>
        <type>Lookup</type>
    </CustomField>