force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</description>
        <inlineHelpText>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBQQ__Quantity__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Product__c</fullName>
                </value>
                <value>
                    <fullName>License_Metric__c</fullName>
                </value>
                <value>
                    <fullName>Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>Is_ILF__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DiscountSchedule__c</fullName>
                </value>
                <value>
                    <fullName>CPQ_Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>Transactional_Tier__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Mapped_Region__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductCode__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Source__c</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Location__c</fullName>
                </value>
                <value>
                    <fullName>Use_Bundled_Price__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>