force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedObject__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedObject__c</fullName>
        <description>Object against which the query is evaluated. Required if Match Type = Field Value.</description>
        <inlineHelpText>Object against which the query is evaluated. Required if Match Type = Field Value.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>