force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedValue__c</fullName>
        <description>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</description>
        <inlineHelpText>The value you want to match in the field you selected using the operator chosen. Required if Match Type = Static Value.</inlineHelpText>
        <label>Tested Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>