force-app/main/default/objects/SBQQ__LookupQuery__c/validationRules/SBQQ__Configuration_Attribute_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Configuration_Attribute_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SBQQ__MatchType__c, &apos;Configuration Attribute Value&apos;) &amp;&amp; ISBLANK(SBQQ__ProductRule__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__MatchType__c</errorDisplayField>
        <errorMessage>Testing Configuration Attributes is only supported for Lookup Queries associated with Product Rules.</errorMessage>
    </ValidationRule>